Updated pom.xml and Grande_Collection.java for Jenkins headless run

--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>MerinoLaminates</groupId>
-	<artifactId>MerinoLaminates</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
- <!-- ✅ Encoding fix for Maven & Jenkins -->
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>MerinoLaminates</groupId>
+    <artifactId>MerinoLaminates</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+
+    <!-- ✅ Global project properties -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -17,47 +18,59 @@
 
     <dependencies>
 
-        <!-- Selenium Java -->
+        <!-- ✅ Selenium Core -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.29.0</version>
+            <version>4.25.0</version>
         </dependency>
 
-        <!-- TestNG -->
+        <!-- ✅ Chrome DevTools (matches Chrome 142) -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-devtools-v142</artifactId>
+            <version>4.25.0</version>
+        </dependency>
+
+        <!-- ✅ TestNG -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.7.1</version>
+            <version>7.10.2</version>
             <scope>test</scope>
         </dependency>
 
-        <!-- WebDriverManager -->
+        <!-- ✅ WebDriverManager -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.5.3</version>
+            <version>5.9.2</version>
         </dependency>
 
-        <!-- Apache POI -->
+        <!-- ✅ Apache POI for Excel handling -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
             <version>5.4.0</version>
         </dependency>
 
-        <!-- Apache POI OOXML -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>5.4.0</version>
         </dependency>
 
-        <!-- Logging -->
+        <!-- ✅ Logging (fixes Log4j warning) -->
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>2.0.12</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.23.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.23.1</version>
         </dependency>
 
     </dependencies>
@@ -65,7 +78,7 @@
     <build>
         <plugins>
 
-            <!-- Compiler Plugin -->
+            <!-- ✅ Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -77,16 +90,20 @@
                 </configuration>
             </plugin>
 
-            <!-- Surefire Plugin (for TestNG + UTF-8 fix) -->
+            <!-- ✅ Surefire Plugin (runs TestNG XML + encoding + stability) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>3.2.5</version>
                 <configuration>
                     <suiteXmlFiles>
                         <suiteXmlFile>testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
-                    <argLine>-Dfile.encoding=UTF-8 -Dsun.jnu.encoding=UTF-8</argLine>
+                    <argLine>
+                        -Dfile.encoding=UTF-8 
+                        -Dsun.jnu.encoding=UTF-8 
+                        -Dwebdriver.http.factory=jdk-http-client
+                    </argLine>
                 </configuration>
             </plugin>
 
