Update pom.xml second time

--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	
     <modelVersion>4.0.0</modelVersion>
-    <groupId>MerinoLaminates</groupId>
-    <artifactId>MerinoLaminates</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+	<groupId>MerinoLaminates</groupId>
+	<artifactId>MerinoLaminates</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 
-    <!-- ✅ Global project properties -->
+    <!-- ✅ Encoding & Compiler setup -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -18,25 +18,25 @@
 
     <dependencies>
 
-        <!-- ✅ Selenium Core -->
+        <!-- ✅ Selenium Java -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.25.0</version>
+            <version>4.29.0</version>
         </dependency>
 
-        <!-- ✅ Chrome DevTools (matches Chrome 142) -->
+        <!-- ✅ Add DevTools for Chrome 142 -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-devtools-v142</artifactId>
-            <version>4.25.0</version>
+            <version>4.29.0</version>
         </dependency>
 
         <!-- ✅ TestNG -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.10.2</version>
+            <version>7.7.1</version>
             <scope>test</scope>
         </dependency>
 
@@ -44,33 +44,28 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.9.2</version>
+            <version>5.5.3</version>
         </dependency>
 
-        <!-- ✅ Apache POI for Excel handling -->
+        <!-- ✅ Apache POI -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
             <version>5.4.0</version>
         </dependency>
 
+        <!-- ✅ Apache POI OOXML -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>5.4.0</version>
         </dependency>
 
-        <!-- ✅ Logging (fixes Log4j warning) -->
+        <!-- ✅ Logging -->
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.23.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.23.1</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.12</version>
         </dependency>
 
     </dependencies>
@@ -90,20 +85,16 @@
                 </configuration>
             </plugin>
 
-            <!-- ✅ Surefire Plugin (runs TestNG XML + encoding + stability) -->
+            <!-- ✅ Surefire Plugin (for TestNG + UTF-8 fix) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
+                <version>3.1.2</version>
                 <configuration>
                     <suiteXmlFiles>
                         <suiteXmlFile>testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
-                    <argLine>
-                        -Dfile.encoding=UTF-8 
-                        -Dsun.jnu.encoding=UTF-8 
-                        -Dwebdriver.http.factory=jdk-http-client
-                    </argLine>
+                    <argLine>-Dfile.encoding=UTF-8 -Dsun.jnu.encoding=UTF-8</argLine>
                 </configuration>
             </plugin>
 
